--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,32 @@ Homestead.json
 .idea/
 puphpet/config-custom.yaml
 
+# windows thumbnail cache
+Thumbs.db
+
+# composer vendor dir
+/vendor*
+
+# composer itself is not needed
+composer.phar
+
+# Mac DS_Store Files
+.DS_Store
+
+# phpunit itself is not needed
+phpunit.phar
+# local phpunit config
+/phpunit.xml
+.vagrant/
+html/
+puphpet/files/dot/
+puphpet/puppet/modules/augeasproviders_core/augeas/
+puphpet/puppet/modules/augeasproviders_sysctl/spec/fixtures/manifests/
+puphpet/puppet/modules/augeasproviders_sysctl/spec/fixtures/modules/
+puphpet/puppet/modules/debconf/spec/fixtures/
+puphpet/puppet/modules/epel/spec/fixtures/
+puphpet/puppet/modules/epel/spec/functions/
+puphpet/puppet/modules/epel/spec/hosts/
+puphpet/puppet/modules/git/junit/
+puphpet/puppet/modules/sysctl/spec/fixtures/
+teestb/
