--- a/blog/composer.json
+++ b/blog/composer.json
@@ -8,7 +8,10 @@
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "jenssegers/mongodb": "@stable",
+        "garf/laravel-conf": "~1.0",
+        "garf/laravel-notifications": "@stable"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
