--- a/blog/package.json
+++ b/blog/package.json
@@ -18,5 +18,9 @@
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
         "vue": "^2.5.7"
+    },
+    "dependencies": {
+        "dev": "^0.1.3",
+        "font-awesome": "^4.7.0"
     }
 }
