--- a/blog/package.json
+++ b/blog/package.json
@@ -13,13 +13,13 @@
         "jquery": "^3.2",
         "laravel-mix": "^2.0",
         "lodash": "^4.17.4",
-        "popper.js": "^1.12",
-        "vue": "*"
+        "popper.js": "^1.14.4",
+        "vue": "^2.5.7"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.2.0",
         "ajv": "^6.5.2",
         "dev": "^0.1.3",
+        "font-awesome": "^4.7.0",
         "node-sass": "^4.9.2"
     }
 }
